    TimerQueueManager protocol class which BaseDisplay now inherits from.
  - BTimer now defaults to NOT recurring.  Most of the timers in blackbox were
    one shots so I saw little benefit in defaulting to repeating timers.
  - added emacs local variables to each file that prevent the addition of tabs
  - XGetInputFocus() is void yet we were using it in a if() test.

Changes from 0.62.0 to 0.62.1:
  - the lock modifier code handles user redefined modifiers better
  - check if the locale actually needs multibyte support before using multibyte
    functions
  - use srcdir in all of the makefiles
  - added zh_CN (Chinese) nls support

Changes from 0.61.1 to 0.62.0:
  - the immorel release
  - added the ja_JP nls directory and man pages
  - general code touchups
  - blackbox-nls.hh is always generated even if --disable-nls is used.
    This allows us to not have all of those hideous #ifdef NLS chunks.
    Nothing to worry about, if you do not want NLS this does not affect you
  - Workspace::placeWindow() cleanups.  Also a speed bump from reducing the
    use of iterator->current() and changing the delta from 1 to 8
  - cleanups to compile with g++ 3.0
  - make distclean actually removes Translation.m and blackbox-nls.hh.
    Also fixed Makefile.am to pass --foreign instead of --gnu when calling
    the autotools.
  - fixed a desciptor leak in BScreen::parseMenuFile, seems opendir
    lacked a matching closedir.
  - fix transient window handling code in Workspace::removeWindow() so
    transients give focus back to their parents properly.  The code originally
    handled sloppy focus then transient windows, so we just flopped the
    if/elsif.  This is immediately noticable with web browsers and their open
    location windows.
  - plugged a small leak in ~Toolbar
  - fixed list::insert so you really can insert at item number 2.  While there
    I cleaned up the code a bit.
  - added decoration to the atom state stored in a window